# geni.com.rs

./: Cargo.toml
.github/workflows/: rust.yml  website.yml
crates/geni-api-v1/: Cargo.toml  README.md
crates/geni-api-v1/src/: lib.rs
crates/geni-api-v1/tests/: document-339953.json  photo-21557506.json  test_all.rs
site/: config.yaml
site/pages/: about.md  index.md
src/: lib.rs
tests/: profile-122248213.json  test_all.rs
