[package]
name = "geni"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "JSON specification for the Geni.com API v1"
keywords = ["web", "api"]
categories = ["web-programming::http-server"]
readme = "README.md"
repository = "https://github.com/szabgab/geni.com.rs"
homepage = "https://geni.code-maven.com/"

[dependencies]
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
